--- a/Frontend/codex-frontend/package.json
+++ b/Frontend/codex-frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.5",
+    "@react-icons/all-files": "^4.1.0",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.5",
     "eslint": "8.32.0",
@@ -21,6 +22,7 @@
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
